app/django-bbx/bbx/static/css/main.css
/* ... */
html, body, #container {height: 100%; }
#container {margin: 0 auto; }
#content {
    float: left;
    width: 70%;
    padding-top: 2px;
    margin-right: 5px;
}
#sidebar {
    float: left;
    width: 20%;
    height: 100%;
    max-width: 300px !important;
    margin-right: 2px; 
    margin-top: 180px;
    min-width: 200px;
    padding: 10px;    
    background-color: #fff; 
    border-radius: 8px;
}
#footer {clear: both; height: 40px; position: fixed; z-index: 10; background-color: #E1D2A0; width: 100%; bottom: -2px; border-top: #fff solid 2px; }
.bbx #content,
.mocambola #content,
.mucua #content,
.media #content,
.rede #content { margin-bottom: 40px; margin-top: 180px; margin-left: 10px}

a {text-decoration: none;}

/*
 * general
 */
.inline {float: left}
.bold {font-weight: bold}
/*
 * header
 */
#header {width: 100%; height: 180px; background-color: #fff; position: fixed }
#header-top {background-image: url('../images/faixabanner.png'); background-repeat: repeat-x; height: 80px }
#header-image {background-image: url('../images/cabecalho.png'); background-repeat: no-repeat; margin: 0 auto; height: 80px }
.posicoes {display: none}
.home #header,
.login #header {height: 295px; background: url('../images/home-header-repeat.png') repeat-x; }

.home #header #header-top,
.login #header #header-top {background: url('../images/login-home-header.png') no-repeat scroll; width: 1137px; height: 295px; margin: 0 auto}

.home #content,
.login #content {background: url('../images/home-content-repeat.png'); width: 100%; height: 90%; margin-top: 290px;}
.home #content-top,
.login #content-top { height: 100%; background: url("../images/home-login-content.png") no-repeat scroll 0 0; padding:0; margin-top: 0}
.home #content .left {width:35%; float: left; height: 100%; }
.home #content .middle {width:150px; float: left; height: 100%; margin-top: 20px;}
.home #content .right {width:50%; float: left; height: 100%; font-size: 13px; margin-top: 20px}
.home #footer {display: none}

#menu {margin-left: 35%; margin-top: -40px}
.menu-itens li {display: inline-block; border-radius: 8px; background-color: #d5c590; border: 2px solid #fff; color: #fff; font-size: 18px; font-weight: bold; padding: 4px; margin: 4px;}
.menu-itens li a {color: #fff; text-decoration: none; }
.menu-itens .current {background-color: #145B7A}
.menu-itens .recent-1 {border: 2px dashed #fff; opacity: 0.7}
.menu-itens .recent-2 {border: 2px dashed #fff; opacity: 0.5}
.menu-itens .recent-3 {border: 2px dashed #fff; opacity: 0.3}

/*
 * login
 */
.login #content .right #form_login .first-line div {float: left; }
.login #content .right #form_login p,
.login #content .right #form_login span,
.login #content .right #form_login a {color: #2f7f37; font-weight: bold; margin: 6px; margin-bottom:0; text-decoration: none}
.login #content .right #form_login .second-line p {color: #d1c188 }
.login #content .right #form_login .second-line input {border: #d1c188 solid 1px }
.login #content .right #form_login .second-line a {color: #a4945c }
.login #content .right #form_login img {vertical-align: bottom; margin: 2px}
.login #content .right #form_login .second-line div {clear: both; color: #2f7f37; font-weight: bold }
.login #content .right #form_login input,
.login #content .right #form_login select {border: #81bc5f solid 1px; border-radius: 4px; font-size: 10px; width: 100px; margin: 5px }
.login input.submit {width: 30px !important }
.login #message-area {color: #f66 !important}

.content-div {width: 80%; max-width: 700px; min-width: 650px; float: right}

/*
 * footer
 */
#usage-content {padding: 6px; width: 1000px; font-size: 10px; font-weight: bold }
#usage-content .usage-bar,
#usage-content .legend {width: 700px; height: 15px; padding-left: 6px }
#usage-content .legend .used {color: #36a; width: 150px}
#usage-content .legend .demanded {color: #c33; width: 150px}
#usage-content .usage-bar .the-bar {border: 3px solid #fff; height: 9px; width: 700px}
#usage-content .usage-bar .the-bar .used {background-color: #36a; height: 9px; border-right: 2px solid #fff}
#usage-content .usage-bar .the-bar .demanded {background-color: #c33; height: 9px}
#usage-content .total {width: 100px; color: #385; padding-left: 6px; }

/*
 * sidebar
 */

#user-profile {height: 50px}
#sidebar #user-profile img {float: left; width: 45px; height: 45px}
#sidebar #user-profile h4 {font-size: 12px; float: left; text-decoration: none; color: #D5C590 !important; margin: 0 auto; padding-top: 12px; padding-left: 8px}
#sidebar #link-login a {color: #D5C590; font-size: 12px; font-weight: bold}
#user-profile a.logout {font-size:11px; color:#D5C590; float: right; background-image: url(/images/logout.png); width: 37px; height: 18px}

#place-profile {padding-top: 5px; text-align: center; color: #145B7A; }
#place-profile a {text-decoration: none}
#place-profile .link a {color: #005880; font-weight: bold}
#place-profile div {padding: 3px}
#place-profile .more-info a {border-radius: 4px; border: 2px solid #aac0ca; color: #aac0ca; padding-left: 6px; padding-right: 6px; }
#place-profile img {border-radius: 75px }
#cloud {padding: 20px}
#cloud div {display: inline}
#cloud div a {color: #aac0ca; font-weight: bold}

/*
 * visualizacoes de media
 */
.media #content {background-color: #fff; border-radius: 5px;}
.destaques {clear: both}
#content .media {clear: both}
#content .media div {float: right;}
.destaques h3.title {color: #fff; font-size: 26px; margin: 4px}
.media #buscador .media-display-type {display: none}

#header .media-display-type div {margin: 0; padding: 0; margin-right: 15px; float: left; margin-top: 15px }
#header .media-display-type .grid {background: url(/images/grid-off.png); width: 17px; height: 17px; cursor: pointer}
#header .media-display-type .list {background: url(/images/list-off.png); width: 17px; height: 17px; cursor: pointer}
#header .media-display-type .grid:hover {background: url(/images/grid-on.png)}
#header .media-display-type .list:hover {background: url(/images/list-on.png)}
/* ... */

